vlc-java/src/main/java/com/tek/vlc/jna/LibvlcLibrary.java

    /**
     * Gets VLC object information about a log message: the type name of the VLC<br>
     * object emitting the message, the object header if any and a temporaly-unique<br>
     * object identifier. This information is mainly meant for <b>manual</b><br>
     * troubleshooting.<br>
     * The returned type name may be "generic" if unknown, but it cannot be NULL.<br>
     * The returned header will be NULL if unset; in current versions, the header<br>
     * is used to distinguish for VLM inputs.<br>
     * The returned object ID will be zero if the message is not associated with<br>
     * any VLC object.<br>
     * \param ctx message context (as passed to the @ref libvlc_log_cb callback)<br>
     * \param name object name storage (or NULL) [OUT]<br>
     * \param header object header (or NULL) [OUT]<br>
     * \param line source code file line number storage (or NULL) [OUT]<br>
     * \warning The returned module name and source code file name, if non-NULL,<br>
     * are only valid until the logging callback returns.<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_get_object(const libvlc_log_t*, const char**, const char**, uintptr_t*)</code><br>
     * <i>native declaration : line 464</i><br>
     * @deprecated use the safer methods {@link #libvlc_log_get_object(com.sun.jna.ptr.PointerByReference, java.lang.String[], java.lang.String[], com.sun.jna.ptr.PointerByReference)} and {@link #libvlc_log_get_object(com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference, com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    void libvlc_log_get_object(Pointer ctx, PointerByReference name, PointerByReference header, PointerByReference id);
    /**
     * Gets VLC object information about a log message: the type name of the VLC<br>
     * object emitting the message, the object header if any and a temporaly-unique<br>
     * object identifier. This information is mainly meant for <b>manual</b><br>
     * troubleshooting.<br>
     * The returned type name may be "generic" if unknown, but it cannot be NULL.<br>
     * The returned header will be NULL if unset; in current versions, the header<br>
     * is used to distinguish for VLM inputs.<br>
     * The returned object ID will be zero if the message is not associated with<br>
     * any VLC object.<br>
     * \param ctx message context (as passed to the @ref libvlc_log_cb callback)<br>
     * \param name object name storage (or NULL) [OUT]<br>
     * \param header object header (or NULL) [OUT]<br>
     * \param line source code file line number storage (or NULL) [OUT]<br>
     * \warning The returned module name and source code file name, if non-NULL,<br>
     * are only valid until the logging callback returns.<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_get_object(const libvlc_log_t*, const char**, const char**, uintptr_t*)</code><br>
     * <i>native declaration : line 464</i>
     */
    void libvlc_log_get_object(PointerByReference ctx, String name[], String header[], PointerByReference id);
    /**
     * Gets VLC object information about a log message: the type name of the VLC<br>
     * object emitting the message, the object header if any and a temporaly-unique<br>
     * object identifier. This information is mainly meant for <b>manual</b><br>
     * troubleshooting.<br>
     * The returned type name may be "generic" if unknown, but it cannot be NULL.<br>
     * The returned header will be NULL if unset; in current versions, the header<br>
     * is used to distinguish for VLM inputs.<br>
     * The returned object ID will be zero if the message is not associated with<br>
     * any VLC object.<br>
     * \param ctx message context (as passed to the @ref libvlc_log_cb callback)<br>
     * \param name object name storage (or NULL) [OUT]<br>
     * \param header object header (or NULL) [OUT]<br>
     * \param line source code file line number storage (or NULL) [OUT]<br>
     * \warning The returned module name and source code file name, if non-NULL,<br>
     * are only valid until the logging callback returns.<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_get_object(const libvlc_log_t*, const char**, const char**, uintptr_t*)</code><br>
     * <i>native declaration : line 464</i>
     */
    void libvlc_log_get_object(PointerByReference ctx, PointerByReference name, PointerByReference header, PointerByReference id);
    /**
     * Unsets the logging callback for a LibVLC instance. This is rarely needed:<br>
     * the callback is implicitly unset when the instance is destroyed.<br>
     * This function will wait for any pending callbacks invocation to complete<br>
     * (causing a deadlock if called from within the callback).<br>
     * \param p_instance libvlc instance<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_unset(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 490</i><br>
     * @deprecated use the safer method {@link #libvlc_log_unset(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    void libvlc_log_unset(Pointer libvlc_instance_tPtr1);
    /**
     * Unsets the logging callback for a LibVLC instance. This is rarely needed:<br>
     * the callback is implicitly unset when the instance is destroyed.<br>
     * This function will wait for any pending callbacks invocation to complete<br>
     * (causing a deadlock if called from within the callback).<br>
     * \param p_instance libvlc instance<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_unset(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 490</i>
     */
    void libvlc_log_unset(PointerByReference libvlc_instance_tPtr1);
    /**
     * Sets the logging callback for a LibVLC instance.<br>
     * This function is thread-safe: it will wait for any pending callbacks<br>
     * invocation to complete.<br>
     * \param cb callback function pointer<br>
     * \param data opaque data pointer for the callback function<br>
     * \note Some log messages (especially debug) are emitted by LibVLC while<br>
     * is being initialized. These messages cannot be captured with this interface.<br>
     * \warning A deadlock may occur if this function is called from the callback.<br>
     * \param p_instance libvlc instance<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_set(libvlc_instance_t*, libvlc_log_cb, void*)</code><br>
     * <i>native declaration : line 508</i><br>
     * @deprecated use the safer method {@link #libvlc_log_set(com.sun.jna.ptr.PointerByReference, libvlc.LibvlcLibrary.libvlc_log_cb, com.sun.jna.Pointer)} instead
     */
    @Deprecated 
    void libvlc_log_set(Pointer libvlc_instance_tPtr1, LibvlcLibrary.libvlc_log_cb cb, Pointer data);
    /**
     * Sets the logging callback for a LibVLC instance.<br>
     * This function is thread-safe: it will wait for any pending callbacks<br>
     * invocation to complete.<br>
     * \param cb callback function pointer<br>
     * \param data opaque data pointer for the callback function<br>
     * \note Some log messages (especially debug) are emitted by LibVLC while<br>
     * is being initialized. These messages cannot be captured with this interface.<br>
     * \warning A deadlock may occur if this function is called from the callback.<br>
     * \param p_instance libvlc instance<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_set(libvlc_instance_t*, libvlc_log_cb, void*)</code><br>
     * <i>native declaration : line 508</i>
     */
    void libvlc_log_set(PointerByReference libvlc_instance_tPtr1, LibvlcLibrary.libvlc_log_cb cb, Pointer data);
    /**
     * Sets up logging to a file.<br>
     * \param p_instance libvlc instance<br>
     * \param stream FILE pointer opened for writing<br>
     *         (the FILE pointer must remain valid until libvlc_log_unset())<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_set_file(libvlc_instance_t*, FILE*)</code><br>
     * <i>native declaration : line 519</i><br>
     * @deprecated use the safer method {@link #libvlc_log_set_file(com.sun.jna.ptr.PointerByReference, libvlc.LibvlcLibrary.FILE)} instead
     */
    @Deprecated 
    void libvlc_log_set_file(Pointer libvlc_instance_tPtr1, LibvlcLibrary.FILE stream);
    /**
     * Sets up logging to a file.<br>
     * \param p_instance libvlc instance<br>
     * \param stream FILE pointer opened for writing<br>
     *         (the FILE pointer must remain valid until libvlc_log_unset())<br>
     * \version LibVLC 2.1.0 or later<br>
     * Original signature : <code>void libvlc_log_set_file(libvlc_instance_t*, FILE*)</code><br>
     * <i>native declaration : line 519</i>
     */
    void libvlc_log_set_file(PointerByReference libvlc_instance_tPtr1, LibvlcLibrary.FILE stream);
    /**
     * Always returns minus one.<br>
     * This function is only provided for backward compatibility.<br>
     * \param p_instance ignored<br>
     * \return always -1<br>
     * Original signature : <code>int libvlc_get_log_verbosity(const libvlc_instance_t*)</code><br>
     * <i>native declaration : line 529</i><br>
     * @deprecated use the safer method {@link #libvlc_get_log_verbosity(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    int libvlc_get_log_verbosity(Pointer p_instance);
    /**
     * Always returns minus one.<br>
     * This function is only provided for backward compatibility.<br>
     * \param p_instance ignored<br>
     * \return always -1<br>
     * Original signature : <code>int libvlc_get_log_verbosity(const libvlc_instance_t*)</code><br>
     * <i>native declaration : line 529</i>
     */
    int libvlc_get_log_verbosity(PointerByReference p_instance);
    /**
     * This function does nothing.<br>
     * It is only provided for backward compatibility.<br>
     * \param p_instance ignored<br>
     * \param level ignored<br>
     * Original signature : <code>void libvlc_set_log_verbosity(libvlc_instance_t*, unsigned)</code><br>
     * <i>native declaration : line 539</i><br>
     * @deprecated use the safer method {@link #libvlc_set_log_verbosity(com.sun.jna.ptr.PointerByReference, int)} instead
     */
    @Deprecated 
    void libvlc_set_log_verbosity(Pointer p_instance, int level);
    /**
     * This function does nothing.<br>
     * It is only provided for backward compatibility.<br>
     * \param p_instance ignored<br>
     * \param level ignored<br>
     * Original signature : <code>void libvlc_set_log_verbosity(libvlc_instance_t*, unsigned)</code><br>
     * <i>native declaration : line 539</i>
     */
    void libvlc_set_log_verbosity(PointerByReference p_instance, int level);
    /**
     * This function does nothing useful.<br>
     * It is only provided for backward compatibility.<br>
     * \param p_instance libvlc instance<br>
     * \return an unique pointer or NULL on error<br>
     * Original signature : <code>libvlc_log_t* libvlc_log_open(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 549</i><br>
     * @deprecated use the safer method {@link #libvlc_log_open(com.sun.jna.ptr.PointerByReference)} instead
     */
    @Deprecated 
    PointerByReference libvlc_log_open(Pointer p_instance);
    /**
     * This function does nothing useful.<br>
     * It is only provided for backward compatibility.<br>
     * \param p_instance libvlc instance<br>
     * \return an unique pointer or NULL on error<br>
     * Original signature : <code>libvlc_log_t* libvlc_log_open(libvlc_instance_t*)</code><br>
     * <i>native declaration : line 549</i>
     */
    PointerByReference libvlc_log_open(PointerByReference p_instance);
